# up-transport-android-rust

./: .gitignore  Cargo.toml  README.md
.github/: run_unit_tests.sh
.github/workflows/: build.yaml
aidl-rust-codegen/: Cargo.toml  README.md
aidl-rust-codegen/src/: Android.bp  lib.rs
aidl-rust-codegen/src/aidl/: Android.bp  mod.rs
aidl-rust-codegen/src/aidl/org/eclipse/uprotocol/core/ubus/: IUBus.aidl  IUListener.aidl
aidl-rust-codegen/src/aidl/org/eclipse/uprotocol/v1/internal/: ParcelableUEntity.aidl  ParcelableUMessage.aidl  ParcelableUStatus.aidl  ParcelableUUri.aidl
aidl-rust-codegen/src/aidl/parcelable_stubs/: ParcelableUMessage.rs  mod.rs  parcelable_uentity.rs  parcelable_umessage.rs  parcelable_ustatus.rs  parcelable_uuri.rs
aidl-rust-codegen/src/binder_impl/: IUBus.rs  IUListener.rs  mod.rs
aidl-rust-codegen/src/service_stub/: lib.rs  my_stub_iubus.rs  my_stub_iulistener.rs
iubus-iulistener-example/: Cargo.toml
iubus-iulistener-example/src/: cli.rs  client.rs  client_java.rs  client_rust.rs  main.rs  server.rs
iulistener-example/: Cargo.toml
iulistener-example/src/: cli.rs  client.rs  main.rs  server.rs
