[package]
name = "aidl-rust-codegen"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
binder = { workspace = true }
binder_tokio = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }

[features]
use_proto = []

default = ["use_proto"]
