# Copyright (c) 2024 General Motors GTO LLC
#
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing,
#  software distributed under the License is distributed on an
#  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#  KIND, either express or implied.  See the License for the
#  specific language governing permissions and limitations
#  under the License.
#  SPDX-FileType: SOURCE
#  SPDX-FileCopyrightText: 2023 General Motors GTO LLC
#  SPDX-License-Identifier: Apache-2.0

[package]
name = "aidl-rust-codegen"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
binder = { workspace = true }
binder_tokio = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }
log = "0.4.20"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[features]
use_proto = []

default = ["use_proto"]
