################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
name = "iubus-iulistener-example"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
aidl-rust-codegen = { path = "../aidl-rust-codegen" }
anyhow = { workspace = true }
async-trait = { workspace = true }
binder = { workspace = true }
binder_tokio = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }
